--- a/src/styles/basics/_base.scss
+++ b/src/styles/basics/_base.scss
@@ -1,24 +1,46 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:100');
 
-.container {
-  max-width: 1200px;
+.primary-title {
+  color: $color3;
+  margin-bottom: 3rem;
+  width: 100%;
+
+  &:after {
+    content: "";
+    display: block;
+    width: 45px;
+    height: 4px;
+    background-color: $color3;
+    margin-top: .4em;
+  }
 }
 
-.title {
+.secondary-title {
+  text-align: center;
+  margin-bottom: .6em;
+  color: $color3;
+  width: 100%;
+}
+
+.card-title {
   padding: 12px 0 6px 0;
   color: #2196f3;
   font-weight: bold;
   font-size: 24px !important;
   letter-spacing: -1px !important;
+
+  > span {
+    color: #555;
+    letter-spacing: 1px !important;
+  }
 }
 
-.title > span {
-  color: #555;
-  letter-spacing: 1px !important;
+.container {
+  max-width: 1200px;
 }
 
 .v-parallax__content {
-  background: rgba(0, 0, 0, 0.5);
+  background: rgba(0, 0, 200, 0.25);
 }
 
 .v-parallax__image {
@@ -27,4 +49,8 @@
 
 .v-card__text {
   padding: 0;
+}
+
+.v-responsive__content {
+  background: rgba(0, 0, 200, 0.25);
 }
