refactor code and update parallax about image

--- a/src/styles/components/_contact-form.scss
+++ b/src/styles/components/_contact-form.scss
@@ -8,7 +8,7 @@ h1 {
 }
 
 .header {
-  background: $color3;
+  background-color: lighten($color3, 6);
   padding: .3em 0 .5em 0 !important;
   color: white;
 }
@@ -20,7 +20,7 @@ h1 {
 
 .container {
   padding: 0 !important;
-  border: 12px solid $color3;
+  border: 12px solid lighten($color3, 6);
   border-radius: 4px;
 }
 
