--- a/src/styles/basics/_base.scss
+++ b/src/styles/basics/_base.scss
@@ -1,5 +1,63 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:100');
 
+h1, h2 {
+  padding-bottom: .5em;
+}
+
+#app {
+  // margin: 0 auto;
+  // font-family: 'Roboto', sans-serif;
+  // background: white;
+  // width: 100%;
+  // min-height: 100vh;
+  // position: relative;
+  // display: flex;
+  // flex-direction: column;
+  // flex: 1;
+}
+
+.display-1 {
+  text-transform: uppercase;
+  letter-spacing: -2px;
+  font-weight: bold;
+}
+
+.display-2 {
+  text-transform: uppercase;
+  font-weight: bold;
+  color: #333;
+}
+
+.application a {
+  color: inherit !important;
+}
+
+.container {
+  padding: 0 !important;
+  margin: 0 auto;
+}
+
+.main-content {
+  // max-width: 1200px !important;
+  margin: 0 auto;
+  background: white;
+  padding: 6em 2em;
+  flex: 1 0 auto;
+}
+
+.theme--light .toolbar {
+  background-color: transparent;
+}
+
+.toolbar__items {
+  height: 1.8em;
+  background-color: none;
+}
+
+.card__text {
+  padding: 0;
+}
+
 .primary-title {
   color: $color3;
   margin-bottom: 3rem;
@@ -24,13 +82,14 @@
 
 .card-title {
   padding: 12px 0 6px 0;
-  color: #2196f3;
+  color: $color6;
   font-weight: bold;
   font-size: 24px !important;
   letter-spacing: -1px !important;
+  text-transform: uppercase;
 
   > span {
-    color: #555;
+    color: lighten($color1, 40);
     letter-spacing: 1px !important;
   }
 }
@@ -40,7 +99,7 @@
 }
 
 .v-parallax__content {
-  background: rgba(0, 0, 200, 0.25);
+  background: rgba($color3, 0.3);
 }
 
 .v-parallax__image {
@@ -52,5 +111,5 @@
 }
 
 .v-responsive__content {
-  background: rgba(0, 0, 200, 0.25);
+  background: rgba($color3, 0.3);
 }
