--- a/src/styles/components/_navigation.scss
+++ b/src/styles/components/_navigation.scss
@@ -1,3 +1,11 @@
+.v-toolbar__items {
+  color: darken($color2, 20);
+
+  .router-link-active {
+    color: $color2 !important;
+  }
+}
+
 img {
   height: 64px;
   width: 225px;
@@ -10,10 +18,6 @@ img.drawer {
   height: 30px !important;
 }
 
-li.active {
-  background: rgba(0, 0, 0, 0.14);
-}
-
 .menuItem {
   color: #ccc !important;
   text-align: center;
@@ -23,11 +27,11 @@ li.active {
   display: inline-block;
   font-weight: bold;
   padding: 0 1.5em;
-  border-right: 1px solid white;
-}
+  border-right: 1px solid $color8;
 
-.menuItem:hover {
-  color: white !important;
+  &:hover {
+    color: $color2 !important;
+  }
 }
 
 .standard {
@@ -39,6 +43,10 @@ li.active {
   z-index: 2;
   height: 7em;
   padding-top: 1.2em;
+
+  a.menuItem {
+    font-size: 1.2em;
+  }  
 }
 
 .sticky {
@@ -46,28 +54,17 @@ li.active {
   background-color: rgba(0,0, 0,0.9) !important;
   z-index: 2;
   height: 4.5em;
-}
+  
+  a.menuItem {
+    font-size: 1em;
+    margin-top: 8px;
+  }
 
-.sticky img {
-  top: .6em;
-  height: 40px;
-  width: 150px;
-}
-
-.standard a.menuItem {
-  font-size: 1.2em;
-}
-
-.sticky a.menuItem {
-  font-size: 1em;
-}
-
-.router-link-exact-active {
-  color: white !important;
-}
-
-.router-link-exact-active:hover {
-  cursor: default;
+  img {
+    top: .6em;
+    height: 40px;
+    width: 150px;
+  }  
 }
 
 .btn {
