--- a/src/styles/views/_services.scss
+++ b/src/styles/views/_services.scss
@@ -39,7 +39,7 @@
   height: 22rem;
 
   > p {
-    color: #555;
+    color: $color7;
     font-size: 1.2em;
     text-transform: uppercase;
     font-weight: 500;
