--- a/src/styles/basics/_base.scss
+++ b/src/styles/basics/_base.scss
@@ -2,6 +2,7 @@
 
 h1, h2 {
   padding-bottom: .5em;
+  text-transform: uppercase;
 }
 
 #app {
@@ -96,6 +97,12 @@ h1, h2 {
 
 .container {
   max-width: 1200px;
+  position: relative;
+}
+
+.v-carousel {
+  // border: 4px solid red;
+  // position: absolute;
 }
 
 .v-parallax__content {
