--- a/src/styles/views/_home.scss
+++ b/src/styles/views/_home.scss
@@ -9,16 +9,25 @@
 
 /* media queries */
 @media (max-width: 959px) {
-  .container {
-    padding: 0 0 1em 0 !important;
+  .cards-content {
+    padding: 0 2rem;
+
+    .pr-2, .pl-2 {
+      padding: 0 !important;
+    }
   }
-  .last-card {
-    padding-bottom: 0 !important;
-  }
+
+  // .container {
+  //   padding: 0 0 1em 0 !important;
+  // }
+
+  // .last-card {
+  //   padding-bottom: 0 !important;
+  // }
 }
 
-@media (max-width: 599px) {
-  .cards-content {
-    padding-top: 26em;
-  }
-}
+// @media (max-width: 599px) {
+//   .cards-content {
+//     padding-top: 26em;
+//   }
+// }
