--- a/src/styles/components/_testimonials.scss
+++ b/src/styles/components/_testimonials.scss
@@ -1,8 +1,9 @@
 .testimonial-quote {
   font-size: 1rem;
+  width: 100%;
 
   &.group {
-    padding-left: 2em;
+    // padding-left: 2em;
     padding-bottom: 3em;
 
     &.last {
