--- a/src/styles/components/_contact-form.scss
+++ b/src/styles/components/_contact-form.scss
@@ -64,23 +64,29 @@ h1 {
   }
 }
 
-@media (max-width: 599px) {
-  .header {
-    padding: .2em !important;
-  }
-
-  .input-group {
-    padding-right: 0 !important;
+@media (max-width: 960px) {
+  .contact-form .container {
+    border-width: 2px;
   }
 }
 
-@media (max-width: 415px) {
-  form {
-    padding: 2em 0 0;
-  }
+// @media (max-width: 599px) {
+//   .header {
+//     padding: .2em !important;
+//   }
 
-  .container {
-    border: 0;
-    border-radius: 0;
-  }
-}
+//   .input-group {
+//     padding-right: 0 !important;
+//   }
+// }
+
+// @media (max-width: 415px) {
+//   form {
+//     padding: 2em 0 0;
+//   }
+
+//   .container {
+//     border: 0;
+//     border-radius: 0;
+//   }
+// }
