--- a/src/styles/components/_carousel.scss
+++ b/src/styles/components/_carousel.scss
@@ -23,7 +23,7 @@
 }
 
 /* media queries */
-@media (max-width: 959px) {
+@media (max-width: 1024px) {
   .v-carousel {
     height: 40rem !important;
   }
@@ -38,6 +38,10 @@
 
     h1.title {
       font-size: 3.5rem !important;
+    }
+
+    h2 {
+      // font-size: 3rem !important;
     }
   }
 }
