--- a/src/styles/components/_parallax.scss
+++ b/src/styles/components/_parallax.scss
@@ -1,3 +1,7 @@
+.v-parallax {
+  height: 700px !important;
+}
+
 h1, h2 {
   max-width: 70%;
   margin: 0 auto;
@@ -9,12 +13,22 @@ h1 {
 }
 
 /* media queries */
-@media (max-width: 960px) {
-  .parallax-content > h1 {
-    max-width: 600px;
-    margin-top: 6rem;
-    font-size: 3rem !important;
-    line-height: 3.5rem !important;
+@media (max-width: 1024px) {
+  .v-parallax {
+    height: 500px !important;
+
+    .parallax-content {
+      > h1 {
+        max-width: 600px;
+        margin-top: 6rem;
+        font-size: 3rem !important;
+        line-height: 3.5rem !important;
+      }
+
+      h2 {
+        display: none;
+      }
+    }
   }
 }
 
