--- a/src/styles/views/_about.scss
+++ b/src/styles/views/_about.scss
@@ -10,25 +10,15 @@ img {
   width: 30rem !important;
 }
 
-@media (max-width: 960px) {
-  .container {
-    padding: 0 0.5rem !important;
-    margin-top: 0 !important;
-
-    .testimonials-layout > div {
-      margin-left: 0;
-      padding: 2.5rem 0;
-    }
-  }
-
-  h1 {
-    padding-bottom: 0;
-    margin: 0;
+@media (max-width: 1024px) {
+  .testimonials-layout > div {
+    margin-left: 0;
+    padding: 2.5rem 0;
   }
 
   img {
     margin-left: 0;
     width: 100%;
-    margin-bottom: 2em;
+    margin-bottom: 1rem;
   }
 }
