--- a/src/styles/views/_contact.scss
+++ b/src/styles/views/_contact.scss
@@ -17,6 +17,17 @@
       hyphens: auto;
       width: 80%;
     }
+
+    .v-icon {
+      vertical-align: top;
+      border: 2px solid $color4;
+      color: $color4;
+      border-radius: 5px;
+      padding: 8px;
+      text-align: center;
+      width: 3.3rem !important;
+      margin-right: .7em;
+    }
   }
 }
 
@@ -24,25 +35,24 @@
   margin-top: -9rem;
 }
 
-.v-icon {
-  vertical-align: top;
-  border: 2px solid $color4;
-  color: $color4;
-  border-radius: 5px;
-  padding: 8px;
-  text-align: center;
-  width: 3.3rem !important;
-  margin-right: .7em;
-}
+@media (max-width: 1024px) {
+  .contact-info {
+    margin-bottom: 3rem;
+  }
 
-@media only screen and (min-width: 960px) and (max-width: 1150px) {
-  .contact-info > div.address > span {
-    line-height: 1.2em !important;
+  .message-form {
+    margin: 0 0 2rem 0;
   }
 }
 
-@media only screen and (max-width: 499px) {
-  .contact-info > div.address > span {
-    line-height: 1.2em !important;
-  }
-}
+// @media only screen and (min-width: 960px) and (max-width: 1150px) {
+//   .contact-info > div.address > span {
+//     line-height: 1.2em !important;
+//   }
+// }
+
+// @media only screen and (max-width: 499px) {
+//   .contact-info > div.address > span {
+//     line-height: 1.2em !important;
+//   }
+// }
