responsive navigation drawer

--- a/src/styles/components/_contact-form.scss
+++ b/src/styles/components/_contact-form.scss
@@ -67,6 +67,11 @@ h1 {
 @media (max-width: 960px) {
   .contact-form .container {
     border-width: 2px;
+
+
+  }
+  .v-input {
+    font-size: 2rem;
   }
 }
 
