--- a/src/styles/components/_navigation.scss
+++ b/src/styles/components/_navigation.scss
@@ -110,8 +110,20 @@ a:last-of-type {
   border-right: none;
 }
 
-@media (max-width: 599px) {
-  .toolbar__content > div {
-    margin: 0 !important;
+@media (max-width: 960px) {
+  // navigation drawer
+  .v-list__tile--avatar .v-list__tile__title {
+    height: 6rem;
+
+    > img {
+      width: 180px;
+      height: 50px;
+    }
   }
 }
+
+// @media (max-width: 599px) {
+//   .toolbar__content > div {
+//     margin: 0 !important;
+//   }
+// }
