--- a/src/styles/basics/_base.scss
+++ b/src/styles/basics/_base.scss
@@ -116,7 +116,7 @@ h1, h2 {
   background: rgba($color3, 0.4);
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 1280px) {
   .about, .services, .contact {
     margin-top: 0 !important;
     padding: 0 1rem !important;
@@ -140,5 +140,21 @@ h1, h2 {
   // navigation drawer
   .v-list__tile--avatar {
     height: 7rem;
+  }
+}
+
+@media (max-width: 415px) {
+  .about, .services, .contact {
+    margin-top: 0 !important;
+    padding: 0 0.5rem !important;
+
+    // .parallax-content > h2 {
+    //   display: none;
+    // }    
+  }
+
+  h1 {
+    padding-bottom: 0;
+    margin: 0;
   }
 }
