--- a/src/styles/components/_contact-form.scss
+++ b/src/styles/components/_contact-form.scss
@@ -85,13 +85,17 @@ h1 {
 //   }
 // }
 
-// @media (max-width: 415px) {
-//   form {
-//     padding: 2em 0 0;
-//   }
+@media (max-width: 425px) {
+  .container {
+    border: 0;
+    border-radius: 0;
 
-//   .container {
-//     border: 0;
-//     border-radius: 0;
-//   }
-// }
+    form {
+      padding: 2em 0 0;
+  
+      .v-input {
+        padding-right: 0 !important;
+      }
+    }
+  }
+}
