--- a/src/styles/components/_testimonials.scss
+++ b/src/styles/components/_testimonials.scss
@@ -49,6 +49,10 @@
   .container {
     padding-right: 1.8em !important;
 
+    h1 {
+      margin: 2rem 0 3.5rem;
+    }
+
     .testimonial-quote {
       padding-left: 1.5rem;
     }
