--- a/src/styles/views/_contact.scss
+++ b/src/styles/views/_contact.scss
@@ -45,14 +45,8 @@
   }
 }
 
-// @media only screen and (min-width: 960px) and (max-width: 1150px) {
-//   .contact-info > div.address > span {
-//     line-height: 1.2em !important;
-//   }
-// }
-
-// @media only screen and (max-width: 499px) {
-//   .contact-info > div.address > span {
-//     line-height: 1.2em !important;
-//   }
-// }
+@media only screen and (max-width: 425px) {
+  .contact-info > div.address > span {
+    line-height: 1.2em !important;
+  }
+}
