--- a/src/styles/basics/_base.scss
+++ b/src/styles/basics/_base.scss
@@ -119,11 +119,7 @@ h1, h2 {
 @media (max-width: 1280px) {
   .about, .services, .contact {
     margin-top: 0 !important;
-    padding: 0 1rem !important;
-
-    // .parallax-content > h2 {
-    //   display: none;
-    // }    
+    padding: 0 1rem !important; 
   }
 
   h1 {
@@ -139,18 +135,18 @@ h1, h2 {
 
   // navigation drawer
   .v-list__tile--avatar {
-    height: 7rem;
+    height: 5rem;
   }
 }
 
 @media (max-width: 415px) {
+  body {
+    font-size: 1rem;
+  }
+
   .about, .services, .contact {
     margin-top: 0 !important;
     padding: 0 0.5rem !important;
-
-    // .parallax-content > h2 {
-    //   display: none;
-    // }    
   }
 
   h1 {
