--- a/src/styles/views/_contact.scss
+++ b/src/styles/views/_contact.scss
@@ -26,7 +26,7 @@
       padding: 8px;
       text-align: center;
       width: 3.3rem !important;
-      margin-right: .7em;
+      margin-right: 1rem;
     }
   }
 }
