--- a/src/styles/basics/_base.scss
+++ b/src/styles/basics/_base.scss
@@ -116,6 +116,10 @@ h1, h2 {
   background: rgba($color3, 0.4);
 }
 
+.v-list__tile {
+  padding: 0;
+}
+
 @media (max-width: 1280px) {
   .about, .services, .contact {
     margin-top: 0 !important;
