--- a/src/styles/components/_navigation.scss
+++ b/src/styles/components/_navigation.scss
@@ -10,7 +10,7 @@ img {
   height: 64px;
   width: 225px;
   position: absolute;
-  top: 1rem;
+  top: 0.7rem;
 }
 
 .v-navigation-drawer {
@@ -56,7 +56,6 @@ img {
   top: 0;
   right: 0;
   z-index: 2;
-  height: 7em;
   padding-top: 1.2em;
 
   a.menuItem {
@@ -68,7 +67,6 @@ img {
   position: fixed;
   background-color: rgba(0,0, 0,0.9) !important;
   z-index: 2;
-  height: 4.5em;
   
   a.menuItem {
     font-size: 1em;
@@ -76,7 +74,7 @@ img {
   }
 
   img {
-    top: .6em;
+    top: 1rem;
     height: 40px;
     width: 150px;
   }  
@@ -107,16 +105,12 @@ a:last-of-type {
 
 @media (max-width: 1024px) {
   .standard {
-    height: 6em;
+    height: 5em;
   }
 
   .sticky {
     img {
-      margin-top: 0.4rem;
-    }
-
-    .v-toolbar__side-icon {
-      margin-top: 1.5rem;
+      margin-top: -0.2rem;
     }
   }
 
@@ -126,6 +120,8 @@ a:last-of-type {
   }
 
   .v-navigation-drawer {
+    padding-left: 0.5rem;
+
     img {
       width: 180px;
       height: 50px;
@@ -138,7 +134,7 @@ a:last-of-type {
     img {
       width: 140px;
       height: 45px;
-      margin-top: -0.1rem;
+      margin-top: 0.4rem;
     }
 
     .v-toolbar__side-icon {
