--- a/src/styles/components/_carousel.scss
+++ b/src/styles/components/_carousel.scss
@@ -1,5 +1,5 @@
 .carousel-content {
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: $parallax-filter;
   padding: 2em;
   height: 100%;
 
