--- a/src/styles/setup/_variables.scss
+++ b/src/styles/setup/_variables.scss
@@ -7,3 +7,8 @@ $color6: #2196f3;
 $color7: #75808a;
 $color8: #ccc;
 $color9: #fafafa;
+$color10: #233238;
+$color11: #2ba044;
+$color12: green;
+
+$parallax-filter: rgba(indigo, 0.2);
