--- a/src/styles/setup/_variables.scss
+++ b/src/styles/setup/_variables.scss
@@ -10,5 +10,6 @@ $color9: #fafafa;
 $color10: #233238;
 $color11: #2ba044;
 $color12: green;
+$color13: #1b272b;
 
 $parallax-filter: rgba(indigo, 0.2);
