refactor app component css

--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -1,5 +1,5 @@
 .v-footer {
-  background-image: linear-gradient($color13, $color10) !important;
+  background: $color10 !important;
   box-sizing: border-box;
 
   a {
