--- a/src/styles/basics/_base.scss
+++ b/src/styles/basics/_base.scss
@@ -148,7 +148,34 @@ h1, h2 {
     font-size: 1rem;
   }
 
+  h1.display-1 {
+    font-size: 2em !important;
+  }
+
   .primary-title {
     font-size: 2rem !important;
+  }
+}
+
+/// hello
+
+/* media queries */
+@media only screen and (max-width: 599px) {
+  // h1.display-2 {
+  //   font-size: 2.2em !important;
+  // }
+
+  // h1.display-1 {
+  //   font-size: 2em !important;
+  // }
+
+  // .card__text, .main-content {
+  //   padding: 0 !important;
+  // }
+}
+
+@media (max-width: 1300px) {
+  .container {
+    max-width: 100% !important;
   }
 }
