--- a/src/styles/setup/_variables.scss
+++ b/src/styles/setup/_variables.scss
@@ -1,15 +1,2 @@
-$color1: #000;
-$color2: #fff;
-$color3: #343a40;
-$color4: #daa520;
-$color5: gold;
-$color6: #2196f3;
-$color7: #75808a;
-$color8: #ccc;
-$color9: #fafafa;
-$color10: #233238;
-$color11: #2ba044;
-$color12: green;
-$color13: #1b272b;
-
-$parallax-filter: rgba(indigo, 0.2);
+@import 'fonts';
+@import 'colors';
