--- a/src/styles/setup/_colors.scss
+++ b/src/styles/setup/_colors.scss
@@ -1,15 +1,13 @@
-$color1: #000;
-$color2: #fff;
-$color3: #343a40;
-$color4: #daa520;
-$color5: gold;
-$color6: #2196f3;
-$color7: #75808a;
-$color8: #ccc;
-$color9: #fafafa;
-$color10: #233238;
-$color11: #2ba044;
-$color12: green;
-$color13: #1b272b;
+$color-01: #000;
+$color-02: #fff;
+$color-03: #343a40;
+$color-04: #daa520;
+$color-05: gold;
+$color-06: #2196f3;
+$color-07: #75808a;
+$color-08: #ccc;
+$color-09: #fafafa; // not used
+$color-10: #233238;
+$color-11: #2ba044;
 
-$parallax-filter: rgba($color13, 0.2);
+$parallax-filter: rgba($color-10, 0.2);
