--- a/src/styles/setup/_fonts.scss
+++ b/src/styles/setup/_fonts.scss
@@ -2,8 +2,8 @@
 
 $font-family: roboto, sans-serif;
 
-$font-size12: 12px;
-$font-size16: 16px;
-$font-size18: 18px;
-$font-size21: 21px;
-$font-size24: 24px;
+$font-12: 12px;
+$font-16: 16px;
+$font-18: 18px;
+$font-21: 21px;
+$font-24: 24px;
