--- a/src/styles/setup/_colors.scss
+++ b/src/styles/setup/_colors.scss
@@ -8,6 +8,6 @@ $color-07: #75808a;
 $color-08: #ccc;
 $color-09: #fafafa; // not used
 $color-10: #233238;
-$color-11: #2ba044;
+$color-11: #1b272b;
 
 $parallax-filter: rgba($color-10, 0.2);
