--- a/src/styles/components/_carousel.scss
+++ b/src/styles/components/_carousel.scss
@@ -34,6 +34,7 @@
     h1.title, h2 {
       max-width: 600px;
       line-height: 3rem;
+      border: 4px solid red;
     }
 
     h1.title {
@@ -52,7 +53,7 @@
 
     h1.title {
       max-width: 200px;
-      font-size: 1.8rem !important;
+      font-size: $font-28 !important;
       line-height: 2.2rem;
     }
 
