--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -13,7 +13,7 @@
   .footer-block {
     position: relative;
     line-height: 1.7rem;
-    font-size: 1.1rem;
+    font-size: $font-18;
     font-family: $font-family;
     max-width: 30% !important;
     justify-content: center;
