--- a/src/styles/components/_parallax.scss
+++ b/src/styles/components/_parallax.scss
@@ -21,7 +21,7 @@ h1 {
       > h1 {
         max-width: 600px;
         margin-top: 6rem;
-        font-size: 3rem !important;
+        font-size: $font-48 !important;
         line-height: 3.5rem !important;
       }
 
@@ -40,7 +40,7 @@ h1 {
       line-height: 2.2rem !important;
       max-width: 300px;
       margin-top: 6rem;
-      font-size: 1.7rem !important;      
+      font-size: $font-28 !important;      
     }
   }
 }
