--- a/src/styles/components/_carousel.scss
+++ b/src/styles/components/_carousel.scss
@@ -33,8 +33,7 @@
 
     h1.title, h2 {
       max-width: 600px;
-      line-height: 3rem;
-      border: 4px solid red;
+      line-height: 100%;
     }
 
     h1.title {
