--- a/src/styles/basics/_base.scss
+++ b/src/styles/basics/_base.scss
@@ -52,7 +52,6 @@ h1, h2 {
 }
 
 .secondary-title {
-  text-align: center;
   margin-bottom: .6em;
   color: $color-03;
   width: 100%;
@@ -123,11 +122,7 @@ h1, h2 {
     font-size: $font-16;
   }
 
-  h1.display-1 {
-    font-size: $font-32 !important;
-  }
-
-  .primary-title {
+  h1.display-1, .primary-title {
     font-size: $font-32 !important;
   }
 }
