--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -22,7 +22,7 @@
       text-transform: uppercase;
       padding: 0.5em 0;
       margin-bottom: 1em;
-      color: $color-05 !important;
+      color: red !important;
       border-bottom: 1px solid $color-07;
       width: 100% !important;
     }
